Feat: connected backend to contacts page

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -18,6 +18,7 @@
     },
     "sections": {
         "articles": "Articles",
+        "contacts": "Contacts",
         "events": "Upcoming events",
         "sponsors": "Sponsors",
         "duk": "Frequently asked questions",
