--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -18,6 +18,7 @@
     },
     "sections": {
         "articles": "Straipsniai",
+        "contacts": "Kontaktai",
         "events": "Artimiausi renginiai",
         "sponsors": "Remėjai",
         "duk": "Dažniausiai užduodami klausimai",
