Other: minor changes in contacts page

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -86,6 +86,7 @@
         "monthsAgo_other": "{{count}} months ago"
     },
     "mainContacts":{
+        "workingHours": "Working hours",
         "letsTalk": "Lets talk about your problems",
         "email": "Email",
         "phone": "Phone",
