Feat: articles page

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -26,6 +26,7 @@
         "follow": "FOLLOW US ON SOCIAL MEDIA"
     },
     "button": {
+        "readMore": "Read more",
         "articles": "All articles",
         "events": "All events",
         "duk": "More questions"
