--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -26,6 +26,7 @@
         "follow": "SEKITE MUS SOCIALINIUOSE TINKLUOSE"
     },
     "button": {
+        "readMore": "Daugiau",
         "articles": "Visi straipsniai",
         "events": "Visi renginiai",
         "duk": "Daugiau klausimų"
