--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
   "common": 
   {
-    "ktusa": "KTU Students association"
+    "ktusa": "KTU Students association",
+    "share": "Share!"
   },
   "home": 
   {
