--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -1,6 +1,7 @@
 {
     "common": {
-        "ktusa": "KTU Studentų atstovybė"
+        "ktusa": "KTU Studentų atstovybė",
+        "share": "Pasidalink!"
     },
     "home": {
         "text": "Organizacija siekianti vieno tikslo, ginti visų studentų interesus, sprendžiant šiandienos ir rytojaus iššūkius.",
