--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -2,7 +2,10 @@
   "common": 
   {
     "ktusa": "KTU Students association",
-    "share": "Share!"
+    "share": "Share!",
+    "content": "Content",
+    "shareToFb": "Share to Facebook",
+    "shareToLinkedIn": "Share to LinkedIn"
   },
   "home": 
   {
