--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -4,7 +4,8 @@
         "share": "Pasidalink!",
         "content": "Turinys",
         "shareToFb": "Pasidalink Facebook platformoje",
-        "shareToLinkedIn": "Pasidalink LinkedIn platformoje"
+        "shareToLinkedIn": "Pasidalink LinkedIn platformoje",
+        "notFound": "404 Turinys nerastas"
     },
     "home": {
         "text": "Organizacija siekianti vieno tikslo, ginti visų studentų interesus, sprendžiant šiandienos ir rytojaus iššūkius.",
