Feat: event details section

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -119,5 +119,13 @@
   "article":
   {
     "readingTime": "Duration"
+  },
+  "event":{
+    "buyTickets": "Buy tickets!",
+    "facebookEventSocial": "Read more:",
+    "facebookEvent": "Facebook event",
+    "startsAt": "Event starts at:",
+    "endsAt": "Event ends at:",
+    "address": "Event location:"
   }
 }
