--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -6,7 +6,8 @@
     "content": "Content",
     "shareToFb": "Share to Facebook",
     "shareToLinkedIn": "Share to LinkedIn",
-    "notFound": "404 Content not found"
+    "notFound": "404 Content not found",
+    "goBack": "Go back"
   },
   "home": 
   {
@@ -128,5 +129,8 @@
     "endsAt": "Event ends at",
     "address": "Event location",
     "organisers": "Event Organisers"
+  },
+  "fsa": {
+    "team": "FSA Team"
   }
 }
