--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -33,6 +33,8 @@
     "sponsors": "Sponsors",
     "duk": "Frequently asked questions",
     "fsa": "Find your faculty's student association",
+    "fsaFull": "Faculty's student association",
+    "aboutUs": "About us",
     "follow": "FOLLOW US ON SOCIAL MEDIA"
   },
   "button": 
@@ -107,7 +109,7 @@
   "mainContacts":
   {
     "workingHours": "Working hours",
-    "letsTalk": "Lets talk about your problems",
+    "letsTalk": "Lets talk!",
     "email": "Email",
     "phone": "Phone",
     "live": "Live",
