Feat: documents added

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -35,7 +35,8 @@
     "fsa": "Find your faculty's student association",
     "fsaFull": "Faculty's student association",
     "aboutUs": "About us",
-    "follow": "FOLLOW US ON SOCIAL MEDIA"
+    "follow": "FOLLOW US ON SOCIAL MEDIA",
+    "documents": "Documents"
   },
   "button": 
   {
