--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -31,7 +31,8 @@
         "fsa": "Raskite savo fakulteto studentų atstovybę",
         "fsaFull": "Fakultetinės studentų atstovybės",
         "aboutUs": "Apie mus",
-        "follow": "SEKITE MUS SOCIALINIUOSE TINKLUOSE"
+        "follow": "SEKITE MUS SOCIALINIUOSE TINKLUOSE",
+        "documents": "Dokumentai"
     },
     "button": {
         "readMore": "Daugiau",
