Other: divider text changed to KTU SA mission

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -23,7 +23,7 @@
       "questions": "questions, organise events and ",
       "enjoy": " enjoy our student life!"
     },
-    "dividerLine": "YOUR OPPORTUNITY TO INSPIRE, ACT AND CHANGE! YOUR OPPORTUNITY TO INSPIRE, ACT AND CHANGE!"
+    "dividerLine": "Every KTU student is an active and creating citizen, responsible leader of society."
   },
   "sections": 
   {
