--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -20,7 +20,7 @@
             "questions": " klausimais, organizuojame renginius bei ",
             "enjoy": "būnam studentiški!"
         },
-        "dividerLine": "TAVO GALIMYBĖ ĮKVĖPTI, VEIKTI IR KEISTI! TAVO GALIMYBĖ ĮKVĖPTI, VEIKTI IR KEISTI!"
+        "dividerLine": "Kiekvienas KTU studentas, aktyvus ir kuriantis pilietis, atsakingas visuomenės lyderis."
     },
     "sections": {
         "articles": "Straipsniai",
