Feat: events fixed by wanted requests

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -131,7 +131,8 @@
     "startsAt": "Event starts at",
     "endsAt": "Event ends at",
     "address": "Event location",
-    "organisers": "Event Organisers"
+    "organisers": "Event Organisers",
+    "tba": "To be announced"
   },
   "fsa": {
     "team": "FSA Team"
