feat: added section name to faq

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -36,7 +36,8 @@
     "fsaFull": "Faculty's student association",
     "aboutUs": "About us",
     "follow": "FOLLOW US ON SOCIAL MEDIA",
-    "documents": "Documents"
+    "documents": "Documents",
+    "findFaq": "Find answers to your questions"
   },
   "button": 
   {
