--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -32,7 +32,8 @@
         "fsaFull": "Fakultetinės studentų atstovybės",
         "aboutUs": "Apie mus",
         "follow": "SEKITE MUS SOCIALINIUOSE TINKLUOSE",
-        "documents": "Dokumentai"
+        "documents": "Dokumentai",
+        "findFaq": "Rask atsakymus į savo klausimus"
     },
     "button": {
         "readMore": "Daugiau",
