Feat: social and academic help pages

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -135,6 +135,15 @@
     "organisers": "Event Organisers",
     "tba": "To be announced"
   },
+  "pages": {
+    "elders": "Elders",
+    "ktuBodies": "Student Representatives in KTU Bodies",
+    "fsaBodies": "Student representatives in faculties bodies",
+    "academicHelp": "Academic Help",
+    "socialHelp": "Social Help",
+    "scholarships": "Scholarships",
+    "whatIsKtuSA": "What is KTU SA?"
+},
   "fsa": {
     "team": "FSA Team"
   }
