Feat: about us page

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -142,7 +142,7 @@
     "academicHelp": "Academic Help",
     "socialHelp": "Social Help",
     "scholarships": "Scholarships",
-    "whatIsKtuSA": "What is KTU SA?"
+    "whatIsKtuSA": "What is KTU SA"
 },
   "fsa": {
     "team": "FSA Team"
