--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -130,7 +130,7 @@
         "academicHelp":"Akademinė pagalba",
         "socialHelp":"Socialinė pagalba",
         "scholarships":"Stipendijos",
-        "whatIsKtuSA":"Kas yra KTU SA?"
+        "whatIsKtuSA":"Kas yra KTU SA"
     },
     "fsa": {
       "team": "FSA Komanda"
