Feat: activity reports

--- a/KTU-SA-WEB/public/locales/en/translation.json
+++ b/KTU-SA-WEB/public/locales/en/translation.json
@@ -37,7 +37,8 @@
     "aboutUs": "About us",
     "follow": "FOLLOW US ON SOCIAL MEDIA",
     "documents": "Documents",
-    "findFaq": "Find answers to your questions"
+    "findFaq": "Find answers to your questions",
+    "activityReports": "Find out what we did"
   },
   "button": 
   {
