--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -33,7 +33,8 @@
         "aboutUs": "Apie mus",
         "follow": "SEKITE MUS SOCIALINIUOSE TINKLUOSE",
         "documents": "Dokumentai",
-        "findFaq": "Rask atsakymus į savo klausimus"
+        "findFaq": "Rask atsakymus į savo klausimus",
+        "activityReports": "Sužinot apie mūsų veiklas"
     },
     "button": {
         "readMore": "Daugiau",
