--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -34,7 +34,7 @@
         "follow": "SEKITE MUS SOCIALINIUOSE TINKLUOSE",
         "documents": "Dokumentai",
         "findFaq": "Rask atsakymus į savo klausimus",
-        "activityReports": "Sužinot apie mūsų veiklas"
+        "activityReports": "Sužinok apie mūsų veiklas"
     },
     "button": {
         "readMore": "Daugiau",
