--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -54,7 +54,7 @@
         },
         "forStudents": {
             "header": "Studentams",
-            "description":"Reikia pridėt tekstą čia",
+            "description":"KTU SA yra jūsų balsas universitete. Bendrauk su mumis, kad galėtumėte kartu gerinti studentų gyvenimą KTU.",
             "dormitories": "Bendrabučiai",
             "scholarships": "Stipendijos",
             "events": "Renginiai",
@@ -62,14 +62,14 @@
         },
         "needHelp": {
             "header": "Reikia pagalbos?",
-            "description":"Reikia pridėt tekstą čia",
+            "description":"KTU SA siūlo pagalba bet kokiems iššūkiams, su kuriais susiduriate. Esame čia, kad padėtume jums būti sėkmingais.",
             "duk": "DUK",
             "socialHelp": "Socialinė pagalba",
             "academicHelp": "Akademinė pagalba"
         },
         "representation":{
             "header": "Atstovavimas",
-            "description":"Reikia pridėt tekstą čia",
+            "description":"KTU SA užtikrina, kad jūsų balsas būtų girdimas universiteto sprendimuose. Mes atstovaujame studentų interesus.",
             "elders": "Seniūnai",
             "representInKtu": "Studentų atstovai KTU organuose",
             "representInfsaBodies":"Studentų atstovai fakultetų organuose"
