--- a/KTU-SA-WEB/public/locales/lt/translation.json
+++ b/KTU-SA-WEB/public/locales/lt/translation.json
@@ -26,7 +26,7 @@
         "articles": "Straipsniai",
         "contacts": "Kontaktai",
         "events": "Artimiausi renginiai",
-        "sponsors": "Remėjai",
+        "sponsors": "Rėmėjai",
         "duk": "Dažniausiai užduodami klausimai",
         "fsa": "Raskite savo fakulteto studentų atstovybę",
         "fsaFull": "Fakultetinės studentų atstovybės",
@@ -58,7 +58,7 @@
             "dormitories": "Bendrabučiai",
             "scholarships": "Stipendijos",
             "events": "Renginiai",
-            "articles": "Straipnsiai"
+            "articles": "Straipsniai"
         },
         "needHelp": {
             "header": "Reikia pagalbos?",
